--- a/Fork of Task1_CORD-19.ipynb
+++ b/Fork of Task1_CORD-19.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The novel **COVID-19** has come and changed how we as humans in this new era of civilization, view diseases. Everything escalated quickly, number of confirmed cases increased exponentially with the R number (which signifies the average number of people which one person infected person will pass the virus to) between 2 and 2.5 at the beginning, and what made it harder is that we don’t understand the disease and more and more lives were lost, we’re in a race with time to try to save as many lives as possible, we want to know more about the disease to flatten the curve, i.e. decrease the R number, and by knowing the risk factors to covid-19, we will be able to do so!! \n",
+    "##### The novel **COVID-19** has come and changed how we as humans in this new era of civilization, view diseases. Everything escalated quickly, number of confirmed cases increased exponentially with the R number (which signifies the average number of people which one person infected person will pass the virus to) between 2 and 2.5 at the beginning, and what made it harder is that we don’t understand the disease and more and more lives were lost, we’re in a race with time to try to save as many lives as possible, we want to know more about the disease to flatten the curve, i.e. decrease the R number, and by knowing the risk factors to covid-19, we will be able to do so!! \n",
     "\n",
-    "#### *And this is what our model aims to, by directing the healthcare giver to the most relevant paper that he might find what he’s looking for. And if our solution saved only one life, then we would be very proud that applying some science and using our time did this!*"
+    "##### *And this is what our model aims to, by directing the healthcare giver to the most relevant paper that he might find what he’s looking for. And if our solution saved only one life, then we would be very proud that applying some science and using our time did this!*"
    ]
   },
   {
